Document the launcher's runtime limitations in detail
Expand the README "Limitations" section beyond native libraries and the
immutable boot layer to spell out the consequences of loading everything from
memory: no CodeSource / unverified signatures / unenforced sealing, multi-release
jars not honored, the module graph fixed to the bundle plus the default boot
modules (with the --add-modules / --add-opens command-line workaround),
module-internal resources absent from the flat class-loader resource API, package
metadata not reconstructed, the in-memory footprint and the never-freed memory-URL
registry, and the native-library extraction caveats. Note shadowing and the agent
Instrumentation requirement as intentional behaviours.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>